@@ -2,19 +2,6 @@ package body agar.gui.view is
 
   use type c.int;
 
-  function init_video
-    (width  : positive;
-     height : positive;
-     bpp    : natural;
-     flags  : video_flags_t := 0) return boolean is
-  begin
-    return init_video
-      (width  => c.int (width),
-       height => c.int (height),
-       bpp    => c.int (bpp),
-       flags  => flags) = 0;
-  end init_video;
-
   function resize_display
     (width  : positive;
      height : positive) return boolean is
